# flipperlinux-os

./: CONTRIBUTING.md  fbt_options.py
applications/drivers/subghz/cc1101_ext/: cc1101_ext.c
applications/main/infrared/: application.fam  infrared_app.h
applications/main/nfc/: nfc_app_i.h
applications/main/nfc/helpers/: nfc_supported_cards.c
applications/main/nfc/scenes/: nfc_scene_config.h
applications/main/subghz/: subghz_history.c
applications/main/subghz/helpers/: subghz_frequency_analyzer_log_item_array.h
applications/main/subghz/views/: receiver.c
applications/services/expansion/: expansion_worker.c
applications/services/gui/: elements.c
applications/services/gui/modules/: button_panel.c  file_browser_worker.c  variable_item_list.c
applications/services/loader/: loader.c
applications/settings/: flipperlinux_about.c
applications/system/flipperlinux_terminal/: CMakeLists.txt  application.fam  terminal.c  terminal_app.c  terminal_app.h  terminal_view.c
applications/system/flipperlinux_themes/: CMakeLists.txt  application.fam  theme_engine.c  theme_engine.h
applications/system/js_app/: js_modules.c
documentation/doxygen/: dev_board.dox
lib/drivers/: lp5562.c
lib/infrared/signal/: infrared_signal.c
lib/nfc/: SConscript
lib/nfc/protocols/felica/: felica.c  felica.h  (+3 more)
lib/subghz/: receiver.c  subghz_keystore.h  subghz_setting.c
lib/subghz/protocols/: bin_raw.c  linear.c
scripts/: build-flipperlinux.sh
targets/f18/: api_symbols.csv
targets/f7/: api_symbols.csv
targets/f7/furi_hal/: furi_hal_serial.c
toolchain/: current
(+4 files in other folders)
